# piano-app

./: .gitignore  CLAUDE.md  HANDOFF.md  project.godot  run_tests.sh
.github/workflows/: tests.yml
kiosk/: piano-hero.service  piano-hero.sh  setup-kiosk.sh
piano-prep/: pyproject.toml
piano-prep/src/piano_prep/: __init__.py  cli.py  fingering.py  indexer.py  metadata.py  models.py  parser.py  recommender.py  sections.py  writer.py
piano-prep/tests/: conftest.py  test_indexer.py  test_parser.py  test_sections.py  test_writer.py
piano-prep/tests/fixtures/: ode_to_joy.mxl  twinkle.mxl
plans/: m1-proof-of-life-plan.md  m2-midi-input-plan.md  m3-first-playable-plan.md  m4-debug-observability-plan.md  m5-song-pipeline-plan.md
scenes/: main.tscn
scripts/autoloads/: debug_capture.gd  debug_telemetry.gd  events.gd  midi_manager.gd
scripts/data/: play_history.gd  song_loader.gd  song_search.gd
scripts/game/: game_engine.gd  keyboard.gd  main.gd  note_renderer.gd
scripts/tools/: playtest.sh  screenshot.sh
scripts/ui/: song_list.gd
songs/: ode_to_joy.json  twinkle.json
specs/: GODOT_CONVENTIONS.md  ROADMAP.md  backlog.md  current-milestone.md  design-references.md  m1-proof-of-life.md  m2-midi-input.md  m3-first-playable.md  m4-debug-observability.md  m5-song-pipeline.md  play-mode-design.md
tests/fixtures/: test_song.json
tests/integration/: test_midi_input.gd
tests/unit/: test_game_engine.gd  test_play_history.gd  test_song_loader.gd
