[project]
name = "piano-prep"
version = "0.1.0"
description = "MusicXML to game-ready JSON pipeline for Piano Hero"
requires-python = ">=3.10"
dependencies = [
    "music21>=9.1",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
fingering = ["pianoplayer>=2.3"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
piano-prep = "piano_prep.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piano_prep"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (pianoplayer)"]
